  - CHG: Add parameter initSex to initByFreq and initByValue.
  - NEW: Initializers now support virtual subpopulations.
  - CHG: Recombiantor no longer supports recombination by sex, 
		and haplodiploid chromosomes.
  - CHG: Recombinator now supports different types of chromosomes.
  - NEW: Add ops parameter to mating schemes.
  - NEW: add mitochondrialGenoTransmitter.

version 0.8.9 - tagged, but not publically released (rev 1948).
  - DOC: Adjust reference output for simuPOP classes.
  - CHG: Rename genoStruTrait::haplodiploid to isHaplodiploid.
  - CHG: Rename genoStruTrait::sexChrom to hasSexChrom.
  - CHG: Remove the maxAllele parameter of population.
  - CHG: Remove outputHelper operator, which has been replaced by pyOutput.
  - CHG: Remove read support for XML and Binary formats.
  - CHG: Completely change the way sex chromosomes are handled, and add
		initial support for customized chromosome.
  - CHG: Rename class vsp to vspID.
  - CHG: Merge population::subPopSize and population::virtualSubPopSize.
  - CHG: Change parameter of population::virtualSubPopName().
  - CHG: Merge population::individuals(sp) and population::individuals(sp, vsp).
  - CHG: Remove genoStruTrait::maxAllele(). Use MaxAllele() instead.
  - CHG: Make pedigree a subclass of population and move population::locateRelatives
        and population::setRelativeIndex to this class.
  - CHG: Temporarily disable all pedigree related features such as pedigree parent
        chooser, pedigree mating scheme, and all samplers.
  - CHG: Rename population::useAncestralPop to population::useAncestralGen.
  - CHG: Replace population::mergePopulation by population::addIndFromPop.
  - CHG: Replace population::mergePopulationByLoci by population::addChromFromPop
		and population::addLociFromPop.
  - CHG: Remove removeEmptySubPops parameter from population::mergeSubPops.
  - CHG: Adjust interface to population::removeLoci.
  - CHG: Adjust interface to population::removeSubPops.